FIX: Removes z-index from css-file

--- a/webapp/IronCalc/src/components/RightDrawer/ConditionalFormatting/edit-rule.css
+++ b/webapp/IronCalc/src/components/RightDrawer/ConditionalFormatting/edit-rule.css
@@ -51,7 +51,6 @@
   border-bottom: 1px solid var(--palette-grey-300);
   position: sticky;
   top: 0;
-  z-index: 1;
   background: var(--palette-common-white);
 }
 
